build/k8s/monitoring/middleware-https-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
